# ChangeLog for app-admin/tripwire
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/tripwire/ChangeLog,v 1.52 2013/09/25 08:45:54 nimiux Exp $

*tripwire-2.4.2.2-r2 (25 Sep 2013)

  25 Sep 2013; Chema Alonso <nimiux@gentoo.org> +tripwire-2.4.2.2-r2.ebuild,
  +files/tripwire-2.4.2.2-twpol-GENERIC.patch, +files/tripwire,
  files/tripwire.txt, metadata.xml:
  Revision bump. Clean up, update of files and inclusion of new "setup" USE
  flag. Thanks to Chuck Seyboldt

  03 Sep 2013; Chema Alonso <nimiux@gentoo.org> metadata.xml:
  Fix tag for spanish description in metadata.xml. Thanks to Chuck Seyboldt

  03 Sep 2013; Chema Alonso <nimiux@gentoo.org> tripwire-2.4.2.2.ebuild,
  tripwire-2.4.2.2-r1.ebuild:
  Remove unnecessary dependency on dev-util/patchutils. Thanks to Chuck
  Seyboldt

  01 May 2013; Chema Alonso <nimiux@gentoo.org> tripwire-2.4.2.2.ebuild,
  tripwire-2.4.2.2-r1.ebuild, +files/tripwire-2.4.2.2-fix-configure.patch:
  Fix configure for automake-1.13 wrt bug #467542 by axs

  25 Apr 2013; Chema Alonso <nimiux@gentoo.org> -tripwire-2.4.2.ebuild,
  -tripwire-2.4.2-r1.ebuild, -files/tripwire-2.4.2-version.patch:
  Drop old versions

  20 Sep 2012; Chema Alonso <nimiux@gentoo.org>
  -files/tripwire-2.3.0-50-rfc822.patch, -files/tripwire-2.3.1-2-fhs.patch,
  -files/tripwire-2.3.1-2-gcc-3.3.patch, -tripwire-2.3.1.2-r1.ebuild,
  -files/tripwire-2.3.1-gcc3.patch, -tripwire-2.3.1.2-r2.ebuild,
  -files/tripwire-format-string-email-report.diff,
  -files/tripwire-friend-classes.patch, -files/tripwire-jbj.patch,
  -files/tripwire-mkstemp.patch:
  Cleanup of version 2.3.

  15 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  tripwire-2.4.2.2-r1.ebuild:
  Stable ppc, bug #428840

  03 Aug 2012; Agostino Sarubbo <ago@gentoo.org> tripwire-2.4.2.2-r1.ebuild:
  Stable for amd64, wrt bug #428840

  01 Aug 2012; Jeff Horelick <jdhore@gentoo.org> tripwire-2.4.2.2-r1.ebuild:
  marked x86 per bug 428840
