@@ -3,25 +3,25 @@ Hash: SHA256
 
 DIST snakeoil-0.5.2.tar.bz2 151814 SHA256 ede87f5dcfc29c6b5ec0ead3e07533b0ed1b3779c79e5d37e542d193a947b5e9 SHA512 c071af6a17912ca64edb8e760c1d5f31a47a206054ff3120562785764c18d9d7045f13447db3c7ba8b33f053941f8dd8d2640733e4e6f85afbac020a65632121 WHIRLPOOL 8d03669e6dc4a2422f87a71e20ec81343a3df0f3a399f712ae6b5a0599ff3caf34986eb7db1c0d2d42818e74710b5aa2f31447db89a8f5e9ed6b04548dd73fb1
 EBUILD snakeoil-0.5.2.ebuild 1522 SHA256 5d9ed61cea828b8286ab81a52d208b1639746e99d4474b3f32b09c561ff22331 SHA512 1d4433a779f98abeb6c6078c414924fd731377ddcdb471b6e0f76769957de70444bc4db6f3834daa061ededfd359c2e42489768896125fc28c7b4e567f9d58dc WHIRLPOOL a071008f05ec7cbf18cdbb85793dc098182e62c51418b9f2ffebbc7e4a3a51baab5e7dabbdc72bef0b8ab2a8fe4591591325aa02917ba74e0afd1f79a5749eab
-EBUILD snakeoil-9999.ebuild 691 SHA256 1c47c1a995eb870c93e50c2b88e97e1f734b62b281f0f01d25e751e367d00936 SHA512 eae4bbf4b386a88b8bd214fab354e89539b585cba2583bad9cad8286fc1383706df8312e64ebd22bdd8ca6f290892de9d0c3ee651d48194426b58073e4cb197b WHIRLPOOL a65d5495e2553dcfb2071c0ade1e954fd82eec4ed8482d693801edbc9c64bf0b7edb0d48e57f3bcd5ec50ef0069d767875ad0511eccbbd49546a96b485ede9f3
-MISC ChangeLog 9967 SHA256 b69fde296a576221c60a57efc5d72197f109d4678c6898ba46c9bf93680eff64 SHA512 39d1099da539177105299084359f0a9b4fbf6ef4b997b90ed85bb13ad9ab29b079a9bc3cf8cf3c0fae5e42f13d2be9c412880cc358eb85c55ccefdc546127f51 WHIRLPOOL dff00d2aedc76f8051fdf13d15e1e2341ee5395fbead6f92164fb97ae0df0bf069b5fe135f28f3b9f36de74caf062ace7b3e6f319de61b19e108eee625203b4c
+EBUILD snakeoil-9999.ebuild 662 SHA256 91bc69f011a980e71d016c2c9fbee4ffd86d82b4efab0dea74e8bb067ccb1595 SHA512 71312bd11e35f85f404fdddd79ec7780c4fe6fabb78c9a0aaf07f8eb793520029ed90b98c3cab86243b8d30aa6ddd5b4f98c5f0d9a20b788f9162cc007229ae2 WHIRLPOOL e01b0297228fd10ae2bdf5e655f6c505d27872e63d44d9c8f6ee2891c0edc27f20e2e314f10f412aff824475713076905bf5a1655df32b16739c14f165dddd5f
+MISC ChangeLog 10114 SHA256 804e2f222b8a1e7d78cd5e422b7192ac246c41bbf984fdff8d37af80479cecc3 SHA512 7dd0415cf7824bb80213a2299ae724eb518a154cd536776da919552d8eebe7f6880e38c65c4189276b18cdfae65709e3d9d3c5038f395b6b9b9d48ebbd7aa40d WHIRLPOOL 3ca1c9d54c3d9e677286870f6106b7ba79f8a865866f62359a09467103ddc968f977168662e10719b6e0e59c8a670b96afd294bf4653a0265d51242aae2960ca
 MISC metadata.xml 402 SHA256 cd3cf5ec7c3fea385f3babab51cb7188fc818295490cf307492ccf23eb8d7bae SHA512 05269a9377d239ed364f388a7e76f5128841e6a74c82b5643e01c0d465bb389e933a00199cc1e91c497e927226917e1a2f54378233b65bd650448eb9e96a5542 WHIRLPOOL 99f467af29066178c13b6626a1f95e264a2eca4a07fd07b0142b24fdf943271702562c32cceeef2d78f4530602f0e23ab5e6d2801ea4d08f2f95509a108ebfeb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSQ/ugXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJSRBEmXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOR/gQAIhCgJiyroLW5W29S8TclNKt
-SUsi23GfXkerRwk8Ato2YpxY8IA1VAwmI4FJfqAQNj0L6tS+i/wAYROD4s3Mg0sr
-HKhVuKonD3cYVpkXl0zUOXv2k9xvkCm4uMPC97v4wbr5vlsKDJSvEpCo0G7bV9zs
-k5cf3zb3SKQ4kpeE9AK2VUwqgntpqAzl9Vb3Jl9c88s38xBlLxyZlXyMYn5p8xHd
-pZ54nEWFkGJyRn6n9oT+sCZbMAY0XwrPb3pfKt0FxvWDJVYh0pj8yimFrtsiHkuT
-+3bUpjRPD/lfgVjrIE/UUX0FRhydQBOy6e0Wp/6JeqbiuK6iI7zWepuYOWcr+1pr
-JTzCsYh12E9WNhBdrKh2rVEtcXQrBkjV6Hfc+ANVsocSCY6vZ3yusIzWjOWUfnSB
-ZwXpn4XH3zxDXvWdLn44vk1qYdumKEast1ahi2YmNWNT4GniAewOmQU7K4r7Wu7S
-4wd4eF3ob8p8E91cu8nepvl9l148HbKWIaqNiG1Cc9tk7am00lTkCzQVvuyN9L1P
-+AUIzuUamCJr8JrkiDfKQCFVkWGpkhH04OojT+bgWgTcPLqmfF9BVL3bAL0z0GUQ
-HkGw85ib52s29WC8Wffrtg05eSxWEq1BcOmEGrz2uV62WngCt6kJGpJfN6X4qHJv
-8vCQ3EyK5GChHqYKJ7G5
-=whor
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO2FwQAIkwG/+dP3YNc4kJOHtWK8vE
+PaoUsSQeoydGe1N7LUROr4NcIqimfi2UlBUS38/Lw+qYmAnFmULGv7vpgXO2KLng
+sYD9NlqpDCHevcrPNQtm1QCqtL40PFkbIj53V+oWEVum7pdF9PAEYU3SdY9j6AJo
+Yc/N4wKV/BXrUdW7XOOu3XH8XLCgLRKzFv4U0gFTl5bh3q9Dmg+DP1k/ObpT47GT
+vUFDv3TUs3riV7Mog33M86IXOTT6qUVJYHpxAg2cPiO90vDMueUhi/r2GkEQ2v9u
+LY2K/LkvKMYpIM0nmITdq54hyqhZo31gb5xd9nmHiJcsCT0y54jr+Q57KL5pBFlY
+EKGb+UdN/2hBIAk7TKzq1jjcExuCDPmyxTEmt4j+s2ohFl5KoR18XO4RZXGQscRj
+Z43+Vt430kKa83GZCH8/TnD1OQhhWH+eRr5yX7+LW/jtI8dgUq96sfLgEfulwjFa
+1EUC8crCsLYi5OdbSeBafWQ03yj27d+EIMS3CBeJqQ9to0iZ/O6iBe7zZXqf5I7k
+zHA52LUjC+skfQu0MWv3kWUZ+HKv5wES99zL2t71KZeG1CtUAPYsVW4eqhuByO2f
+3iJmLl2vSL9PrSlcVh5N6Q4KAhKagoETfHy8sNxHEiIFrok4Ogp0hB94YsWoWlby
+cBMLv0jNkVzmZD76mOI8
+=g0M+
 -----END PGP SIGNATURE-----
