@@ -3,12 +3,12 @@ DEPEND=sys-devel/automake sys-devel/autoconf ssl? ( dev-libs/openssl ) || ( >=sy
 DESCRIPTION=Open Source File Integrity Checker and IDS
 EAPI=5
 HOMEPAGE=http://www.tripwire.org/
-IUSE=ssl static setup
+IUSE=ssl static +tools
 KEYWORDS=~amd64 ~ppc ~x86 ~x86-fbsd
 LICENSE=GPL-2
-PDEPEND=setup? ( app-admin/mktwpol )
+PDEPEND=tools? ( app-admin/mktwpol )
 RDEPEND=virtual/cron virtual/mta ssl? ( dev-libs/openssl )
 SLOT=0
 SRC_URI=mirror://sourceforge/tripwire/tripwire-2.4.2.2-src.tar.bz2
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	2ff578fb151da221e1797f12e2990e72	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=6197e5cf337779c6e3cdeebf9604ef93
+_md5_=04d9d0dacf3b972b12f8f4bef9aea351
