@@ -5,8 +5,8 @@ EAPI=4
 HOMEPAGE=http://snakeoil.googlecode.com/
 IUSE=python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3
 LICENSE=BSD
-RDEPEND=!<sys-apps/pkgcore-0.4.7.8 !dev-python/python-exec:2 python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_python3_2? ( dev-lang/python:3.2 ) python_targets_python3_3? ( dev-lang/python:3.3 ) dev-python/python-exec:0[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)]
+RDEPEND=!<sys-apps/pkgcore-0.4.7.8 python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) python_targets_python3_2? ( dev-lang/python:3.2 ) python_targets_python3_3? ( dev-lang/python:3.3 ) dev-python/python-exec:0[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)]
 REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3 )
 SLOT=0
 _eclasses_=distutils-r1	9b74723dc45a8f359bf7a5c6b257e95f	eutils	4878e7f88afc0ba0866ac112190b0fd4	git-2	9d623256bd82ddbcc6783ae996e178fd	git-r3	eb5a664840bdcf288833bd3e627c7b3e	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	2876e182a9a350a7e0049caf3bf3be12	python-utils-r1	a4940acdd0a5ebdc58aaedd38de4983a	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=34096c4ed22fe1e80571b00fdc8b1d85
+_md5_=ad747dbd75971f5e052f3dcb0ae8b0b3
