@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/snakeoil
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/ChangeLog,v 1.61 2013/09/26 09:16:33 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/ChangeLog,v 1.62 2013/09/26 10:48:24 mgorny Exp $
+
+  26 Sep 2013; Michał Górny <mgorny@gentoo.org> snakeoil-9999.ebuild:
+  Remove the python-exec:2 blocker since the issue has been fixed in git.
 
   26 Sep 2013; Michał Górny <mgorny@gentoo.org> snakeoil-0.5.2.ebuild,
   snakeoil-9999.ebuild:
